--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,9 @@
+python-dotenv==1.2.1
 qdrant_client==1.15.1
 fastembed==0.7.3
 pandas==2.3.3
 openpyxl==3.1.5
+sentence-transformers==5.1.2
+hf_xet==1.2.0
+rank_bm25==0.2.2
+ckip-transformers==0.3.4
