--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,7 @@
 [project]
 name = "salesfaqbot"
-version = "0.1.0"
-description = "Add your description here"
+version = "0.1.2"
+description = "A sales FAQ chatbot application"
 readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
